--- a/e-datasets/data_pre-processing.Rmd
+++ b/e-datasets/data_pre-processing.Rmd
@@ -120,49 +120,62 @@ distinct_months
 ```
 
 ```{r}
-#year month positive_count negative_count
 
-
-iterations = 60
+iterations = 72
 variables = 4
 
-output <- matrix(ncol=variables, nrow=iterations)
+d_change_output <- matrix(ncol=variables, nrow=iterations)
 
-
+y <- 0
  for(yr in distinct_years) {
   this_year_data <- filter(data, year == yr)
-  for(i in 1:iterations){
   for(mth in distinct_months) {
+    
    this_month_data  <- filter(this_year_data , month == mth)
    this_month_total_positive <- total_positive(this_month_data, 0)[1,]
    this_month_total_negative <- total_negative(this_month_data, 0)[1,]
    
-   output[i,1] <- yr
-   output[i,2] <- mth
-   output[i,3] <- this_month_total_positive 
-   output[i,4] <- this_month_total_negative 
+   d_change_output[y,1] <- yr
+   d_change_output[y,2] <- mth
+   d_change_output[y,3] <- this_month_total_positive
+   d_change_output[y,4] <- this_month_total_negative
+   y = y+1
   }
  }
-}
 
-
-output <- data.frame(output)
-class(output)
 ```
 
 
 
 ```{r}
 
+d_change_output <- data.frame(d_change_output)
+d_change_output <- rename(d_change_output, year = X1, month = X2, total_positive = X3, total_negative = X4)
 
+str(d_change_output)
+```
+
+# Exercise 4
+Plot the result from point 3, in order to highlight if there are months, were most of the times the days are positives or negative, make 5 plots for different years (one per year, in each plot there should be 24 bars: the count of negative and positive days for each month).
+
+
+```{r}
+library(tidyr)
+d_change_output <- gather(d_change_output, key=feature, value=value, total_positive, total_negative)
+
+d_change_output <-d_change_output %>% drop_na()
 ```
 
 
 
+```{r fig.width=15}
+library(ggplot2) 
+ggplot(d_change_output, aes(x=month, y=value)) + geom_bar(stat="identity") + facet_wrap(~ year, ncol = 1)
+# ggplot(d_change_output, aes(x = total_negative)) + 
+#   geom_histogram(col="white") + 
+#   facet_wrap(~ year, ncol = 1)
+```
 
-
-# Exercise 4
-Plot the result from point 3, in order to highlight if there are months, were most of the times the days are positives or negative, make 5 plots for different years (one per year, in each plot there should be 24 bars: the count of negative and positive days for each month).
 
 ```{r}
 
